style.css
html {
    /* font-family: BeVietnamPro-Bold; */
}

:root {
    font-size: 16px;
    --display-width: 80%;
    --nav-link-width: 40%;
    --nav-display: flex;
    --hamburger-display: none;
    --nav-button-display: block;
    --hero-image-width: 100%;
    --hero-direction: row;
    --hero-height: 40vw;
    --hero-margin-top: 6rem;
    --hero-heading-size: 3rem;
    --hero-body-copy-width: 70%;
    --hero-text-align: left;
    --copy-line-height: 1.7em;
    --main-desc-width: 38%;
    --main-text-align: left;
    --main-paragraph-width: 82%;
    --product-desc-direction: row;
    --product-margin-top: 13.5vmin;
    --list-mt: 0vmin;
    --list-number-width: auto;
    --list-desc-width: 50%;
    --desc-body-col-start: 2;
    --h2-size: 2rem;
    --review-card-width: 31%;
    --banner-direction: row;
    --banner-heading-width: 300px;
    --banner-copy-width: 80%;
    --body-background-position: 109% -7%, -30% 80%;
    --body-background-size: 50%;

    --primary-dark-blue: hsl(228, 39%, 23%);
    --neutral-dark-grayish-blue: hsl(227, 12%, 61%);
}

@font-face {
    font-family: BeVietnamPro-Bold;
    src:
        local('assets/fonts/BeVietnamPro-Bold.ttf'),
        url('assets/fonts/BeVietnamPro-Bold.ttf')
        format("truetype");
        font-weight: 700;
        font-style: normal;
}

@font-face {
    font-family: BeVietnamPro-Medium;
    src:
        local('assets/fonts/BeVietnamPro-Medium.ttf'),
        url('assets/fonts/BeVietnamPro-Medium.ttf')
        format("truetype");
        font-weight: 500;
        font-style: normal;
}

@font-face {
    font-family: BeVietnamPro-Regular;
    src:
        local('assets/fonts/BeVietnamPro-Regular.ttf'),
        url('assets/fonts/BeVietnamPro-Regular.ttf')
        format("truetype");
        font-weight: 400;
        font-style: normal;
}
@media only screen and (max-width: 1024px) {
    :root {
        --hero-margin-top: 1.625rem;
    }
}

@media only screen and (max-width: 1050px) {
    :root {
        --nav-link-width: 55%;
        --main-desc-width: 45%;
        --review-card-width: 50%;
        --list-desc-width: 45%;
    }
}

@media only screen and (max-width: 760px) {
    :root {
        /* --display-width: 90%; */
        --nav-display: none;
        --nav-button-display: none;
        --hamburger-display: block;
    }
}

@media only screen and (max-width: 768px) {
    :root {
        --display-width: 90%;
        /* --nav-display: none;
        --nav-button-display: none;
        --hamburger-display: block; */
        --hero-margin-top: 1rem;
        --hero-image-width: 100%;
        --hero-body-copy-width: 100%;
        --banner-heading-width: 100%;
        --banner-copy-width: 76%;

    }
}

@media only screen and (max-width: 620px) {
    :root {
        --product-desc-direction: column;
        --main-paragraph-width: 100%;
        --main-desc-width: 100%;
        --main-text-align: center;
        --list-mt: 5.25vmin;
        --list-desc-width: 100%;
        --list-number-width: 62.5px;
        --desc-body-col-start: 1;
    }
}

@media only screen and (max-width: 620px) and (min-width: 424px){
     :root {
        --hero-direction: column;
        --hero-margin-top: 1.7rem;
        --hero-image-width: 79%;
        --hero-height: 386px;
        --hero-text-align: center;
     }

     
}

@media only screen and (max-width: 425px) {
    :root {
        --display-width: 90%;
        --hero-heading-size: 2.375rem;
        --hero-direction: column-reverse;
        --hero-image-width: 100%;
        --hero-height: 340px;
        --hero-margin-top: 3rem;
        --hero-text-align: center;
        --copy-line-height: 1.875rem;
        --product-margin-top: 20vmin;
        --h2-size: 2rem;
        --review-card-width: 90%;
        --banner-direction: column;
        --body-background-position: -172% -3%, 271px 30%;
        --body-background-size: 110%, 61%;
    }
}

@media only screen and (max-width: 375px) {
    :root {
        --hero-height: 77vw;
        --hero-margin-top: 2.5rem;
        --body-background-position: -124% -1%, 236px 31%;
        --body-background-size: 110%, 76%;
    }
}



body {
    display: flex;
    flex-direction: column;
    background-color: hsl(0, 0%, 98%);
    background-image: url("assets/images/bg-tablet-pattern.svg"), url("assets/images/bg-tablet-pattern.svg");
    background-position: right top, left bottom;
    background-repeat: no-repeat, no-repeat;
    background-position: var(--body-background-position);
    background-size: var(--body-background-size);
    background-attachment: scroll;
    overflow-y: visible;
    overflow-x: hidden;
    margin:0px;
}

nav {
    display: flex;
    flex-direction: row;
    width: var(--display-width);
    justify-content: space-between;
    align-items: center;
    /* border: 1px solid red; */
    margin: 0 auto;
    margin-top: 27px !important;

    .hamburger {
        display: var(--hamburger-display);
    }
}

.logo {
    /* width: 12%; */
    display: flex;

    img {
        width: 120px;
    }
}

.navigation {
    display: var(--nav-display);
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    /* border: 1px solid green; */
    width: var(--nav-link-width);
    font-family: BeVietnamPro-Medium;
    font-size: 0.75rem;
    /* font-weight: 400; */
    letter-spacing: 0.02em;
    color: var(--primary-dark-blue);

    p {
        cursor: pointer;
        &:hover {
            color: hsl(227, 12%, 61%);
        }
    }
}

nav button,
.hero button,
.review-section button,
.banner-copy button {
    font-family: BeVietnamPro-Medium;
    padding: 12px;
    border-radius: 26px;
    width: 120px;
    border: none;
    background-color: hsl(12, 88%, 59%);
    color: hsl(0, 0%, 98%);
    cursor: pointer;
    box-shadow: 0px 7.5px 13.5px -3px hsl(12deg 94.45% 74.26%);

    &:hover {
        background-color: hsl(12, 96%, 71%);
    }
}

nav button{
    display: var(--nav-button-display);
}

.hero,
.product-desc {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 0 auto;
    width: var(--display-width);
}

.hero {
    flex-direction: var(--hero-direction);
    margin-top: var(--hero-margin-top);
}

.product-desc {
    align-items: flex-start !important;
    flex-direction: var(--product-desc-direction);
    margin-top: var(--product-margin-top);
}

.hero-copy {
    width: 100%;
    text-align: var(--hero-text-align);
    h1 {
        font-family: BeVietnamPro-Bold !important;
        font-size: var(--hero-heading-size);
        color: var(--primary-dark-blue) !important;
    }

    p {
        font-family: BeVietnamPro-Regular;
        font-size: 1rem;
        color: var(--neutral-dark-grayish-blue);  
        line-height: var(--copy-line-height); 
        width: var(--hero-body-copy-width);
        margin-top: 0em;
    }

    button {
        display: static !important;
        margin-top: 1.5em;
        margin-bottom: 2.5em;
    }
}

.hero-image {
    background-image: url(assets/images/illustration-intro.svg);
    width: var(--hero-image-width);
    height: var(--hero-height);
    background-size: 104%;
    background-repeat: no-repeat;
    background-position-y: 11%;
}

.main-desc {
    width: var(--main-desc-width);
    text-align: var(--main-text-align); 
    h2 {
        font-family: BeVietnamPro-Medium;
        color: var(--primary-dark-blue);
        width: 100%;
        font-size: var(--h2-size);
        /* word-spacing: 0.15em;` */
        margin-top: 0px;
    }

    p {
        font-family: BeVietnamPro-Regular;
        font-size: 1rem;
        color: var(--neutral-dark-grayish-blue);  
        line-height: var(--copy-line-height); 
        width: var(--main-paragraph-width);
        margin-top: 0em;
    }
}

.list-desc {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: fit-content;
    width: var(--list-desc-width);
    margin-top: var(--list-mt);

    .list-el {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        align-items: flex-start;

        .list-number {
            font-family: BeVietnamPro-Medium;
            font-size: 0.875rem;
            color: hsl(0, 0%, 98%);
            height: 0.875em;
            text-align: center;
            /* vertical-align: middle; */
            display: flex;
            align-items: center;
            justify-content: center;
            background-color: hsl(12, 88%, 59%);
            padding: 13px 17px;
            border-radius: 18px;
            width: 2em;
        }

        .desc {
            display: grid;
            grid-template-columns: var(--list-number-width) auto;
            /* width: 78%; */
            font-size: 1rem;
            grid-column-gap: 1em;
            /* grid-row-gap: 1em; */
        }

        .desc-heading {
            font-family: BeVietnamPro-Medium;
            color: var(--primary-dark-blue);
            margin: 0px 0px 0px 0px;
            align-self: center;
        }

        .desc-copy {
            font-family: BeVietnamPro-Regular;
            color: var(--neutral-dark-grayish-blue);
            margin: 0px 0px 0px 0px;
            grid-column-start:var(--desc-body-col-start); 
            grid-column-end: 3;
            /* width: 100%; */
            line-height: var(--copy-line-height);
            margin-top: 0.5em;
        }
    }
}

.list-desc .list-el:nth-child(2),
.list-desc .list-el:nth-child(3) {
    margin-top: 2em;
}

.review-section {
    margin-top: 10rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100vw;
}

.reviews-heading {
    width: fit-content;
    margin: 0 auto;
    font-family: BeVietnamPro-Medium;
    color: var(--primary-dark-blue);
    font-size: var(--h2-size);
}

.testimonials {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: 100%;
    overflow-x: scroll;
    margin: 4rem auto;
    margin-bottom: 45px;
    -ms-overflow-style: none;
    scrollbar-width: none;
    /* scroll-snap-type: x mandatory; */

    &::-webkit-scrollbar {
        display: none;
    }
}

.review-card {
    display: block;
    flex-shrink: 0;
    width: var(--review-card-width);
    margin: 0 10px;
    padding: 15px 25px 30px 20px;
    background-color: hsl(0, 0%, 95%);
    /* scroll-snap-align: start; */
    /* scroll-snap-stop: always;
    scroll-behavior: smooth; */
    /* border-radius: 15px; */
}

.review-body {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    /* cursor: pointer; */

    .reviewer-name {
        font-family: BeVietnamPro-Medium;
        color: var(--primary-dark-blue);
    }
    
    .review {
        font-family: BeVietnamPro-Regular;
        color: var(--neutral-dark-grayish-blue);
        width: 100%;
        text-align: center;
    }
}

.reviewer-img {
    position: absolute;
}

.banner {
    width: 100vw;
    background-color: hsl(12, 88%, 59%);
    margin-top: 50px;
    height: fit-content;
    background-image: url(assets/images/bg-simplify-section-desktop.svg);

}

.banner-copy {
    display: flex;
    flex-direction: var(--banner-direction);
    justify-content: space-between;
    align-content: center;
    width: var(--banner-copy-width);
    margin: 0 auto;
    padding: 20px 20px;

    h2 {
        font-family: BeVietnamPro-Medium;
        color: hsl(0, 0%, 98%);
        width: var(--banner-heading-width);
        font-size: 2rem;
        text-align: var(--main-text-align); 
    }

    button {
        height: fit-content;
        align-self: center;
        background-color: hsl(0, 0%, 98%) !important;
        color: hsl(12, 88%, 59%);
        flex-grow: 0;
        /* text-wrap-mode: nowrap; */
        &:hover {
            background-color: hsl(0, 0%, 98%) !important;
            color: hsl(12, 96%, 71%);
        }
        
    }
}

